style.css
html {
	background:#fff;
	margin: 2.5% auto;
	width:95%;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 0.9em;
}

body{
	padding: 20px 20px 1px 20px;
	border-radius: 10px;
	min-width: 500px;
}

h1 {
	text-align: center;
	margin: 0;
}

img {
	display: block;
	margin-left: auto;
	margin-right: auto;
	width: 75px;
}

main {
	display: block;
	margin-left: auto;
	margin-right: auto;
	width: 70%;
	min-width: 500px;
	max-width: 750px;
	text-align: center;
}

footer {
	padding-top: 10px;
	font-size:.8em;
	color: #777;
	text-align: center;
}

ol {
	text-align: left;
}

.button {
	color: #333;
	background: #fff;
	border: 1px solid #222;
	border-radius: 3px;
	margin: 0px 5px;
	padding: 5px;
	font-size: 1em;
}

.button:active {
	background: #ddd;
}

.button:hover, button:focus {
	box-shadow: 0 0 2px #222;
}

#header_link {
	color: unset;
	text-decoration: unset;
}

#subtitle {
	text-align: center;
	font-style: italic;
	font-size: 0.9em;
	margin: 0;
	padding-bottom: 5px;
}

#intro {
	padding-bottom: 10px;
}

#buttons {
	text-align: center;
	margin-top: 10px;
	margin-bottom: 20px;
}

#urlInput {
	width: 50%;
	min-width: 300px;
	margin-left: 5px;
	padding: 0 5px;
}

#urlSubmit {
	opacity: 0.4;
}

#details-content {
	background: #eee5;
	margin: 10px;
	padding: 10px;
}

#summary {
	background: #fff;
	margin-bottom: 5px;
}

#playlistTitleInput {
	min-width: 300px;
	padding: 0 5px;
}

#playlistDescriptionInput {
	min-width: 500px;
	padding: 0 5px;
}

#outputBox {
	display: block;
	margin-left: auto;
	margin-right: auto;
	margin-top: 10px;
	margin-bottom: 10px;
	width: 90%;
	min-width: 500px;
	color: #f00;
}

